Migrate the `javaTestSetsSecurityManagerPropertyOnVersion17` to Starlark
The test is added to rules_java and removed from Bazel

(ignore-relnotes)

PiperOrigin-RevId: 903721335
Change-Id: Ieddc21731ddfbb494c8475d6af740848fc453c68